--- a/arch/arm/mach-tegra/Kconfig
+++ b/arch/arm/mach-tegra/Kconfig
@@ -238,12 +238,10 @@ config MACH_PLUTUX
 	select MACH_HAS_SND_SOC_TEGRA_WM8903 if SND_SOC
 	select TEGRA_GRHOST
 	select TEGRA_DC
-	select TEGRA_HDMI_74MHZ_LIMIT
 	help
 	  Support for Avionic Design Plutux box.
 	  The board has only HDMI as display, so the platform will select
-	  the requirements for HDMI. In order to make as many as possible
-	  HDMI devices work, we limit the HDMI frequenzy.
+	  the requirements for HDMI.
 
 choice
        prompt "Tegra platform type"
