arm: tegra: Initialize lvds on plutux platform.
It seems that the l4t driver assumes that there is always a lvds display.
This leads to issues in the case were lvds is not setup. For instance we
can not change screen resolution because the frequences are not ajusted
properly.
To workaround this behavior we initialize the lvds display but force to
use hdmi as primary display.

Signed-off-by: Soeren Grunewald <soeren.grunewald@avionic-design.de>

--- a/arch/arm/configs/plutux_defconfig
+++ b/arch/arm/configs/plutux_defconfig
@@ -46,7 +46,7 @@ CONFIG_COMPACTION=y
 CONFIG_KSM=y
 CONFIG_ZBOOT_ROM_TEXT=0x0
 CONFIG_ZBOOT_ROM_BSS=0x0
-CONFIG_CMDLINE="mem=512M@0M console=ttyS0,115200 root=LABEL=boot:/rootfs.img ro"
+CONFIG_CMDLINE="mem=512M@0M console=ttyS0,115200 fbcon=map:1 root=LABEL=boot:/rootfs.img ro"
 CONFIG_CMDLINE_FORCE=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
@@ -234,7 +234,6 @@ CONFIG_NVMAP_ALLOW_SYSMEM=y
 CONFIG_TEGRA_DSI=y
 CONFIG_DISPLAY_SUPPORT=y
 CONFIG_FRAMEBUFFER_CONSOLE=y
-CONFIG_FRAMEBUFFER_CONSOLE_DETECT_PRIMARY=y
 CONFIG_LOGO=y
 # CONFIG_LOGO_LINUX_MONO is not set
 # CONFIG_LOGO_LINUX_CLUT224 is not set
