arm: tegra: Add usb debugging feature to medcom-wide.
This will allow better usb debugging.

Signed-off-by: Soeren Grunewald <soeren.grunewald@avionic-design.de>

--- a/arch/arm/configs/medcom-wide_defconfig
+++ b/arch/arm/configs/medcom-wide_defconfig
@@ -206,8 +206,10 @@ CONFIG_USB_DEVICEFS=y
 CONFIG_USB_SUSPEND=y
 CONFIG_USB_OTG=y
 # CONFIG_USB_OTG_WHITELIST is not set
+CONFIG_USB_MON=m
 CONFIG_USB_EHCI_HCD=y
 CONFIG_USB_EHCI_TEGRA=y
+CONFIG_USB_EHCI_ONOFF_FEATURE=y
 CONFIG_USB_STORAGE=y
 CONFIG_USB_LIBUSUAL=y
 CONFIG_USB_GADGET=y
@@ -221,6 +223,9 @@ CONFIG_MMC_SDHCI=y
 CONFIG_MMC_SDHCI_PLTFM=y
 CONFIG_MMC_SDHCI_TEGRA=y
 CONFIG_STAGING=y
+CONFIG_USBIP_CORE=m
+CONFIG_USBIP_VHCI_HCD=m
+CONFIG_USBIP_HOST=m
 CONFIG_ZRAM=m
 CONFIG_ALTERA_STAPL=m
 CONFIG_EXT4_FS=y
