--- a/arch/arm/configs/medcom-wide_defconfig
+++ b/arch/arm/configs/medcom-wide_defconfig
@@ -43,8 +43,11 @@ CONFIG_AEABI=y
 CONFIG_HIGHMEM=y
 CONFIG_COMPACTION=y
 CONFIG_KSM=y
+CONFIG_USE_OF=y
 CONFIG_ZBOOT_ROM_TEXT=0x0
 CONFIG_ZBOOT_ROM_BSS=0x0
+CONFIG_ARM_APPENDED_DTB=y
+CONFIG_ARM_ATAG_DTB_COMPAT=y
 CONFIG_CMDLINE="mem=512M@0M console=ttyS0,115200 root=LABEL=boot:/rootfs.img ro"
 CONFIG_CMDLINE_FORCE=y
 CONFIG_CPU_FREQ=y
