arm: tegra: Add the tec ng platform
This adds a basic platform for the tec-ng carrier board running a
tamonten-ng T30 com module. It is not yet exposing all of the features
the tec-ng provides, but gives a good start, including eMMC, SD, USB,
UART and some more things.

Change-Id: I6188c42c3a4df77aab91cd401293cc3dc2ca062f
Signed-off-by: Julian Scheel <julian@jusst.de>
Reviewed-on: http://review.adnet.avionic-design.de/223
Reviewed-by: Alban Bedel <alban.bedel@avionic-design.de>

--- a/arch/arm/mach-tegra/Makefile
+++ b/arch/arm/mach-tegra/Makefile
@@ -175,6 +175,11 @@ obj-${CONFIG_MACH_CARDHU}               += board-cardhu-sensors.o
 obj-${CONFIG_MACH_CARDHU}               += board-cardhu-memory.o
 obj-${CONFIG_MACH_CARDHU}               += board-cardhu-powermon.o
 
+obj-${CONFIG_MACH_TEC_NG}               += board-tec-ng.o
+obj-${CONFIG_MACH_TEC_NG}               += board-tec-ng-pinmux.o
+obj-${CONFIG_MACH_TEC_NG}               += board-tec-ng-power.o
+obj-${CONFIG_MACH_TEC_NG}               += board-tec-ng-sdhci.o
+
 obj-${CONFIG_MACH_KAI}                  += board-touch-kai-synaptics-spi.o
 obj-y                                   += board-touch-raydium_spi.o
 
