--- a/arch/arm/mach-tegra/Kconfig
+++ b/arch/arm/mach-tegra/Kconfig
@@ -183,6 +183,13 @@ config MACH_CARDHU
        help
          Support for NVIDIA Cardhu development platform
 
+config MACH_TEC_NG
+       bool "Tamonten Evaluation Carrier NG (TEC-NG) Board"
+       depends on ARCH_TEGRA_3x_SOC
+       help
+         Support for Avionic Design Tamonten Evaluation Carrier developtment
+         platform.
+
 config MACH_P1852
        bool "P1852 board"
        depends on ARCH_TEGRA_3x_SOC
