arm: tegra: Add mtd support to medcom-wide platform.
Change-Id: I7797a99768759e7ced4422203878bdcbc5d7b50e
Signed-off-by: Soeren Grunewald <soeren.grunewald@avionic-design.de>
Reviewed-on: http://review.adnet.avionic-design.de/204
Reviewed-by: Alban Bedel <alban.bedel@avionic-design.de>

--- a/arch/arm/configs/medcom-wide_defconfig
+++ b/arch/arm/configs/medcom-wide_defconfig
@@ -158,10 +158,14 @@ CONFIG_DEVTMPFS=y
 CONFIG_MTD=y
 CONFIG_MTD_CMDLINE_PARTS=y
 CONFIG_MTD_AFS_PARTS=m
-CONFIG_MTD_NAND_TEGRA=m
-CONFIG_MTD_NAND=m
+CONFIG_MTD_CHAR=y
+CONFIG_MTD_BLOCK=y
+CONFIG_MTD_CFI=y
+CONFIG_MTD_NAND_TEGRA=y
+CONFIG_MTD_MTDRAM=m
+CONFIG_MTD_NAND=y
 CONFIG_MTD_NAND_VERIFY_WRITE=y
-CONFIG_MTD_NAND_PLATFORM=m
+CONFIG_MTD_NAND_PLATFORM=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_RAM=m
 CONFIG_MISC_DEVICES=y
