arm: tegra: tec-ng: Add lvds and hdmi support.
Add support for HDMI and LVDS output through the Tegra Display Controller.
The LVDS is configured to work with the 7" 800x480 panel supplied with the
TEC-NG kit.

Change-Id: I05a60b4564cfab2843761660ba49aae534495085
Signed-off-by: Julian Scheel <julian@jusst.de>
Reviewed-on: http://review.adnet.avionic-design.de/311
Reviewed-by: Soeren Grunewald <soeren.grunewald@avionic-design.de>

--- a/arch/arm/mach-tegra/Makefile
+++ b/arch/arm/mach-tegra/Makefile
@@ -176,6 +176,7 @@ obj-${CONFIG_MACH_CARDHU}               += board-cardhu-memory.o
 obj-${CONFIG_MACH_CARDHU}               += board-cardhu-powermon.o
 
 obj-${CONFIG_MACH_TEC_NG}               += board-tec-ng.o
+obj-${CONFIG_MACH_TEC_NG}               += board-tec-ng-panel.o
 obj-${CONFIG_MACH_TEC_NG}               += board-tec-ng-pinmux.o
 obj-${CONFIG_MACH_TEC_NG}               += board-tec-ng-power.o
 obj-${CONFIG_MACH_TEC_NG}               += board-tec-ng-sdhci.o
