arm: tegra: medcom-wide: Add framebuffer rotation support.
The displays for medcom-wide of the latest generation, have there connectors
at a different location than the old ones. This causes problems with the
display cables, because they are now too short. So the plan is to install the
new displays rotated by 180 decrease. Therefor we need rotation support.

Change-Id: Iad0378421cd2aeb6b7b1519b5345c2740a46334b
Signed-off-by: Soeren Grunewald <soeren.grunewald@avionic-design.de>
Reviewed-on: http://review.adnet.avionic-design.de/196
Reviewed-by: Alban Bedel <alban.bedel@avionic-design.de>

--- a/arch/arm/configs/medcom-wide_defconfig
+++ b/arch/arm/configs/medcom-wide_defconfig
@@ -183,6 +183,7 @@ CONFIG_BACKLIGHT_PWM=y
 CONFIG_BACKLIGHT_TEGRA_PWM=y
 CONFIG_FRAMEBUFFER_CONSOLE=y
 CONFIG_FRAMEBUFFER_CONSOLE_DETECT_PRIMARY=y
+CONFIG_FRAMEBUFFER_CONSOLE_ROTATION=y
 CONFIG_LOGO=y
 # CONFIG_LOGO_LINUX_MONO is not set
 # CONFIG_LOGO_LINUX_CLUT224 is not set
