arm: tegra: tec-ng: Add nct1008 sensor driver.
The nct1008 sensor is used as external temperature sensor for the T30 die
temperature. It can be used for thermal throttling as well.

Change-Id: I1ca2c2615ef98a57644f1e1edec4583fd8def7b3
Signed-off-by: Julian Scheel <julian@jusst.de>
Reviewed-on: http://review.adnet.avionic-design.de/235
Reviewed-by: Alban Bedel <alban.bedel@avionic-design.de>

--- a/arch/arm/mach-tegra/Makefile
+++ b/arch/arm/mach-tegra/Makefile
@@ -179,6 +179,7 @@ obj-${CONFIG_MACH_TEC_NG}               += board-tec-ng.o
 obj-${CONFIG_MACH_TEC_NG}               += board-tec-ng-pinmux.o
 obj-${CONFIG_MACH_TEC_NG}               += board-tec-ng-power.o
 obj-${CONFIG_MACH_TEC_NG}               += board-tec-ng-sdhci.o
+obj-${CONFIG_MACH_TEC_NG}               += board-tec-ng-sensors.o
 
 obj-${CONFIG_MACH_KAI}                  += board-touch-kai-synaptics-spi.o
 obj-y                                   += board-touch-raydium_spi.o
