arm: tegra: tec-ng: Add audio devices to platform.
Add all required devices for the audio subsystem. This consists of the audio
core modules, as well as output modules.

Change-Id: I8fe5b5014502d1ca5286c3099ef160322fd4ae05
Signed-off-by: Alban Bedel <alban.bedel@avionic-design.de>
Reviewed-on: http://review.adnet.avionic-design.de/243
Reviewed-by: Julian Scheel <julian.scheel@avionic-design.de>

--- a/arch/arm/mach-tegra/Kconfig
+++ b/arch/arm/mach-tegra/Kconfig
@@ -186,6 +186,7 @@ config MACH_CARDHU
 config MACH_TEC_NG
        bool "Tamonten Evaluation Carrier NG (TEC-NG) Board"
        depends on ARCH_TEGRA_3x_SOC
+       select MACH_HAS_SND_SOC_TEGRA_WM8903 if SND_SOC
        help
          Support for Avionic Design Tamonten Evaluation Carrier developtment
          platform.
